--- a/data/assets/template_daily.html
+++ b/data/assets/template_daily.html
@@ -150,7 +150,7 @@
     <div class="d-flex flex-column" style="width: 1501px; height: 2124px; border: black 1px solid;">
         <div style="width: 1501px;">
             <h1 style="margin-top: 20px; color: white; text-align:center; position: absolute; width: 1501px;">Resumen de Prueba - Toy - __day__</h1>
-            <img src="https://a2gclientdata.s3.us-west-2.amazonaws.com/mlc/header_caserones.png" width=1500 alt=""> 
+            <img src="https://a2gv2-concept.s3.sa-east-1.amazonaws.com/header_test.png" width=1500 alt=""> 
         </div>
 
         <br>
@@ -185,7 +185,7 @@
 
         <div style="width: 1501px;">
             <h1 style="margin-top: 20px; color: white; text-align:center; position: absolute; width: 1501px;">Resumen de Prueba - Toy - __day__</h1>
-            <img src="https://a2gclientdata.s3.us-west-2.amazonaws.com/mlc/header_caserones.png" width=1500 alt=""> 
+            <img src="https://a2gv2-concept.s3.sa-east-1.amazonaws.com/header_test.png" width=1500 alt=""> 
         </div>
 
         <br>
